# pyflann_ibeis

./: .gitignore  .readthedocs.yml  .travis.yml  CHANGELOG.md  CMakeLists.txt  COPYING  README.md  README.rst  build_wheels.sh  clean.sh  publish.sh  pyproject.toml  pytest.ini  run_developer_setup.sh  run_doctests.sh  run_linter.sh  run_multibuild.sh  run_tests.py  setup.py
.github/workflows/: test_binaries.yml  tests.yml
CMake/: flann.pc.in  flann_utils.cmake
dev/: ci_public_gpg_key.pgp.enc  ci_secret_gpg_subkeys.pgp.enc  gpg_owner_trust.enc  setup_secrets.sh  travis_public_gpg_key.pgp.enc  travis_secret_gpg_key.pgp.enc
dev/docker/: make_base_image.py
docs/source/: conf.py  index.rst
examples/: CMakeLists.txt
pyflann_ibeis/: __init__.py  __main__.py  _abi3.c  exceptions.py  exceptions.pyi  flann_ctypes.py  flann_ctypes.pyi  index.py  index.pyi
pyflann_ibeis/lib/: __init__.py
requirements/: build.txt  linting.txt  runtime.txt  tests.txt
src/cpp/: CMakeLists.txt
src/cpp/flann/: config.h  config.h.in
src/cpp/flann/util/: saving.h
test/: memusage_clustering.py  memusage_nn.py  test_clustering.py  test_index_save.py  test_nn.py  test_nn_autotune.py  test_nn_index.py
tests/: test_clustering.py  test_import.py  test_nn.py  test_nn_autotune.py  test_nn_index.py
