[build-system]
requires = ["setuptools>=41.0.1", "wheel", "scikit-build>=0.9.0", "numpy", "ninja"]


[tool.cibuildwheel]
build = "cp37-* cp38-* cp39-* cp310-*"
#build-frontend = "pip"
build-frontend = "build"
#build = "cp310-*"
skip = "pp* cp27-* cp34-* cp35-* cp36-* *-musllinux_*"
build-verbosity = 1

test-requires = ["-r requirements/tests.txt"]
test-command = "python {project}/run_tests.py"

#environment-pass = ["PIP_GLOBAL_OPTION"]
#environment = {"PIP_GLOBAL_OPTION": "-j4"}


#before-all = ""
#before-all-linux = "yum install lz4-devel -y"
#before-build = ""

#manylinux-x86_64-image = "quay.io/erotemic/manylinux2014_x86_64_for:lz4"
#musllinux-x86_64-image = "quay.io/erotemic/muslinux_1_1_x86_64_for:lz4"
#manylinux-i686-image = "quay.io/erotemic/manylinux2014_i686_for:lz4"
#musllinux-i686-image = "quay.io/erotemic/musllinux_1_1_i686_for:lz4"
#manylinux-aarch64-image = "quay.io/erotemic/manylinux2014_aarch64_for:lz4"
#musllinux-aarch64-image = "quay.io/erotemic/musllinux_1_1_aarch64_for:lz4"
#manylinux-ppc64le-image
#manylinux-s390x-image
#before-all = ""
#before-build = ""
#CIBW_BEFORE_BUILD_MACOS
#CIBW_BEFORE_BUILD_WINDOWS
#CIBW_BEFORE_BUILD_WINDOWS

[tool.cibuildwheel.linux]
before-all = "yum install epel-release lz4 lz4-devel -y"

[tool.cibuildwheel.windows]
before-all = "choco install lz4 -y"

[tool.cibuildwheel.macos]
# https://stackoverflow.com/questions/67486887/how-can-you-search-for-install-and-include-link-c-libraries-on-a-mac
before-all = "brew install lz4 &&  set -x && (ls /opt/homebrew || true) && (ls /opt/homebrew/lib || true) &&  (ls /usr/local/include || true)  &&  (ls /usr/local/lib || true) && set +x"
#[tool.cibuildwheel.macos.environment]
#    CFLAGS="-I /usr/local/include"
#    CFLAGS="-I /opt/homebrew/include -L /opt/homebrew/lib"
