[build-system]
requires = [ "setuptools>=41.0.1", "wheel", "scikit-build>=0.9.0", "numpy", "ninja", "cmake"]

[tool.xcookie]
tags = [ "erotemic", "github", "binpy",]
mod_name = "pyflann_ibeis"
repo_name = "pyflann_ibeis"
os = [ "linux" ]
url = "https://github.com/Erotemic/pyflann_ibeis"
description = "pyflann fork for IBEIS"
author = ['Jon Crall', 'Marius Muja']
author_email="erotemic@gmail.com"
min_python = '3.9'
license = "BSD"
dev_status = "stable"

[tool.cibuildwheel]
build = "cp39-* cp310-* cp311-* cp312-* cp313-* cp314-*"
#build = "cp312-*"
build-frontend = "build"
skip = "pp* *-musllinux_*"
build-verbosity = 1
test-requires = [ "-r requirements/tests.txt",]
test-command = "python {project}/run_tests.py"


# See: ~/code/vtool_ibeis_ext/dev/build_base_docker.py
manylinux-x86_64-image = "quay.io/pypa/manylinux_2_28_x86_64"
#manylinux-x86_64-image = "quay.io/erotemic/manylinux2014_x86_64_for:lz4"
#manylinux-i686-image = "quay.io/erotemic/manylinux2014_i686_for:lz4"

[tool.cibuildwheel.linux]
#before-all = "yum install epel-release lz4 lz4-devel -y"
before-all = "yum update -y && yum install lz4-devel -y"

#[tool.cibuildwheel.windows]
#before-all = "choco install lz4 -y"

#[tool.cibuildwheel.macos]
#before-all = "brew install lz4"

[tool.pytest.ini_options]
addopts = "-p no:doctest --xdoctest --xdoctest-style=google --ignore-glob=bin --ignore-glob=setup.py --ignore-glob=docs --ignore-glob=htmlcov"
norecursedirs = ".git ignore build __pycache__ dev _skbuild"
filterwarnings = [ "default", "ignore:.*No cfgstr given in Cacher constructor or call.*:Warning", "ignore:.*Define the __nice__ method for.*:Warning", "ignore:.*private pytest class or function.*:Warning",]

[tool.coverage.run]
branch = true

[tool.coverage.report]
exclude_lines = [ "pragma: no cover", ".*  # pragma: no cover", ".*  # nocover", "def __repr__", "raise AssertionError", "raise NotImplementedError", "if 0:", "if trace is not None", "verbose = .*", "^ *raise", "^ *pass *$", "if _debug:", "if __name__ == .__main__.:", ".*if six.PY2:",]
omit = [ "pyflann_ibeis/__main__.py", "*/setup.py",]
